--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "react": "^18.3.1",
+    "react-do": "^1.1.6",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
+    "react-player": "^2.16.0",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
