--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.9.3",
     "react-player": "^2.16.0",
+    "react-router-dom": "^6.26.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "video-react": "^0.16.0"
