--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@mantine/spotlight": "^7.13.1",
     "react": "^18.3.1",
     "react-do": "^1.1.6",
     "react-dom": "^18.3.1",
