--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/spotlight": "^7.13.1",
     "embla-carousel-react": "^7.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-do": "^1.1.6",
     "react-dom": "^18.3.1",
